switched to DynamicWorldLoadingSystem